initial commit for PWM support on GPIO3 and GPIO4

--- a/Firmware/Board/v3/Odrive.ioc
+++ b/Firmware/Board/v3/Odrive.ioc
@@ -54,6 +54,42 @@ ADC3.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_12
 ADC3.Channel-8\#ChannelInjectedConversion=ADC_CHANNEL_11
 ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC3.ContinuousConvMode=DISABLE
+TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
+ADC2.EnableAnalogWatchDog=false
+ADC3.IPParameters=Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-8\#ChannelInjectedConversion,Channel-8\#ChannelInjectedConversion,SamplingTime-8\#ChannelInjectedConversion,InjectedOffset-8\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,InjectedConvMode,ExternalTrigInjecConv,ExternalTrigConv
+SH.ADCx_IN11.ConfNb=3
+SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
+PA8.Signal=S_TIM1_CH1
+ADC1.InjectedConvMode=None
+SH.ADCx_IN4.ConfNb=2
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
+TIM4.Period=0xffff
+USB_DEVICE.VID-CDC_FS=0x1209
+VP_SYS_VS_tim14.Mode=TIM14
+ProjectManager.HalAssertFull=false
+SH.S_TIM8_CH1.ConfNb=1
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+RCC.MCO2PinFreq_Value=168000000
+PC8.GPIOParameters=GPIO_Label
+CAN1.Prescaler=7
+Mcu.Package=LQFP64
+PB9.Signal=SharedStack_PB9
+PB1.Signal=TIM8_CH3N
+PA5.Locked=true
+NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
+SPI3.Mode=SPI_MODE_MASTER
+SH.SharedStack_PB9.1=I2C1_SDA
+SH.SharedStack_PB9.0=CAN1_TX,Master
+NVIC.TimeBaseIP=TIM14
+TIM1.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
+PA10.Signal=S_TIM1_CH3
+FREERTOS.FootprintOK=true
+PA5.GPIOParameters=GPIO_Label
+PC11.Mode=Full_Duplex_Master
+PB14.GPIOParameters=GPIO_Label
+Dma.SPI3_RX.2.PeriphInc=DMA_PINC_DISABLE
+ADC1.Rank-1\#ChannelInjectedConversion=1
 ADC3.DMAContinuousRequests=DISABLE
 ADC3.DataAlign=ADC_DATAALIGN_RIGHT
 ADC3.DiscontinuousConvMode=DISABLE
@@ -79,7 +115,36 @@ CAN1.AutoWakeUp=ENABLE
 CAN1.BS1=CAN_BS1_6TQ
 CAN1.BS2=CAN_BS2_5TQ
 CAN1.CalculateTimeBit=500
+TIM2.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM2
+PA4.GPIO_Label=M1_TEMP
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ProjectManager.CustomerFirmwarePackage=
+PC4.GPIOParameters=GPIO_Label
+SH.SharedStack_PB8.ConfNb=2
+ADC2.ScanConvMode=DISABLE
 CAN1.CalculateTimeQuantum=166.66666666666669
+NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3 CH3N
+PA6.GPIOParameters=GPIO_Label
+SH.S_TIM4_CH1.ConfNb=1
+Dma.SPI3_TX.1.MemInc=DMA_MINC_ENABLE
+TIM8.OffStateRunMode=TIM_OSSR_ENABLE
+SH.SharedStack_PB8.0=CAN1_RX,Master
+ProjectManager.ProjectFileName=Odrive.ioc
+SH.SharedStack_PB8.1=I2C1_SCL
+Dma.ADC1.0.Instance=DMA2_Stream0
+FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+ADC1.Rank-0\#ChannelRegularConversion=1
+TIM5.IPParameters=Period,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+PA15.GPIOParameters=GPIO_Label
+Mcu.PinsNb=57
+PD2.GPIO_PuPd=GPIO_PULLUP
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+PC13-ANTI_TAMP.GPIO_Label=M0_nCS
+SH.ADCx_IN6.1=ADC2_IN6,IN6
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedConvMode,ExternalTrigInjecConvEdge,ExternalTrigInjecConv,ExternalTrigConv
+TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
+PA9.GPIO_Label=M0_BH
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,Prescaler,TimeSeg1,TimeSeg2,AutoWakeUp,BS1,BS2
 CAN1.Prescaler=7
 CAN1.TimeSeg1=CAN_BS1_6TQ
